# itp-endterm

./: .gitignore  .ruff.toml  README.md  config.json  errors.py  main.py  pyproject.toml
config/: __init__.py  config.py  school.py
models/: __init__.py  course.py  school.py  student.py
routes/: __init__.py  base_route.py  config_route.py  course_route.py  report_route.py  student_route.py
templates/: report.html
util/: __init__.py  errors.py
