[tool.poetry]
name = "itp-endterm"
version = "0.1.0"
description = ""
authors = ["pythonsogood <181958582+pythonsogood@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
