[tool.poetry]
name = "itp-endterm"
version = "0.1.0"
description = ""
authors = ["pythonsogood <181958582+pythonsogood@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
orjson = "^3.10.15"
pydantic = "^2.10.6"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
rapidfuzz = "^3.12.1"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
